--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -22,3 +22,5 @@ security:
 
             # form_login: ~
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
+    access_control:
+            - { path: ^/admin, roles: ROLE_USER_IP, ip:192.168.64.104 }
